# fidod

./: AUTHORS  Makefile.am  TODO  configure.in  configure.scan  fidod.spec
conf/: Makefile.am  fidod.conf.in  fidod.init.in
doc/: Makefile.am  fidod.texi  version.texi
freebsd/: Makefile  distinfo  pkg-comment  pkg-descr  pkg-plist
freebsd/files/: fidod.sh
freebsd/scripts/: createuser
include/: Makefile.am  config.h.in  global.h.in
lib/: Makefile.am  daemon.c  daemon.h  log.c  log.h  readcfg.c  readcfg.h
src/: Makefile.am  fidod.c
